clean up render layer / keybind handling + add workaround for missing tags during data generation